# nifi-rml-processor

./: .gitignore  Dockerfile.nifi  README.md  build.gradle.kts  docker-compose.demo.yml  settings.gradle.kts
demo/: README.md  bootstrap.sh
demo/greenplum-init/: 01_schema.sql  02_seed.sql
demo/lada-example/: car.xmi  engineer.json  prices.csv
demo/superset/: bootstrap.sh
evaluation/mappings/: customers_to_person.rml.csv.ttl  customers_to_person.rml.ttl  customers_to_person.yarrrml.yml  invoices.rml.ttl
evaluation/results/: results_java_20260614_150520.csv  results_py_20260614_152514.csv  results_py_20260614_182136.csv
evaluation/scripts/: generate_datasets.py  nifi_admin.py  parse_results.py  (+2 more)
flows/: README.md  flow_auto_engine_routing.json  flow_benchmark.json  flow_benchmark_py.json  flow_csv_to_rdf.json  flow_json_to_rdf.json  flow_lada_multi_source.json  flow_lada_separate.json  flow_py_csv_to_rdf.json  flow_py_json_to_rdf.json  flow_py_xml_to_rdf.json  flow_xml_to_rdf.json  flow_yarrrml.json  flow_yarrrml_inline.json
nifi-rml-nar/: build.gradle.kts
nifi-rml-processors/: build.gradle.kts
nifi-rml-py/: ExecuteRMLMappingPython.py  pyproject.toml  requirements-dev.txt
nifi-rml-py/nifi_rml_py_helpers/: __init__.py  constants.py  format_converter.py  mapping_repository.py  rml_engine.py  yarrrml_transpiler.py
nifi-rml-py/nifi_rml_py_helpers.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
nifi-rml-py/tests/: conftest.py  fixtures  test_format_converter.py  test_mapping_repository.py  test_rml_engine.py  test_yarrrml_transpiler.py
(+59 files in other folders)
